--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -14,5 +14,7 @@
     "files.associations": {
         "libft.h": "c",
         "unistd.h": "c"
-    }
+    },
+    "editor.insertSpaces": false,
+    "editor.tabCompletion": true
 }
